--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,9 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["./tsconfig.json"]
+    "project": [
+      "./tsconfig.json"
+    ]
   },
   "plugins": [
     "@typescript-eslint",
@@ -22,25 +24,43 @@
   ],
   "rules": {
     "no-constructor-return": "error",
-    "no-duplicate-imports": "error",
+    "no-duplicate-imports": "off",
     "no-promise-executor-return": "error",
     "no-self-compare": "error",
     "no-unmodified-loop-condition": "error",
     "no-unreachable-loop": "error",
     "no-unused-private-class-members": "error",
     "require-atomic-updates": "error",
-
-    "arrow-body-style": ["error", "as-needed"],
+    "arrow-body-style": [
+      "error",
+      "as-needed"
+    ],
     "block-scoped-var": "error",
-    "camelcase": ["error",{ "properties": "always" }],
-    "curly": ["error","all"],
+    "camelcase": [
+      "error",
+      {
+        "properties": "always"
+      }
+    ],
+    "curly": [
+      "error",
+      "all"
+    ],
     "default-case": "error",
     "default-case-last": "error",
     "default-param-last": "error",
     "dot-notation": "error",
     "eqeqeq": "error",
-    "max-depth": ["error", { "max": 4 }],
-    "multiline-comment-style": ["error", "starred-block"],
+    "max-depth": [
+      "error",
+      {
+        "max": 4
+      }
+    ],
+    "multiline-comment-style": [
+      "error",
+      "starred-block"
+    ],
     "no-array-constructor": "error",
     "no-bitwise": "error",
     "no-console": "error",
@@ -72,12 +92,16 @@
     "prefer-arrow-callback": "error",
     "prefer-const": "error",
     "spaced-comment": "error",
-    "strict" : "error",
-
+    "strict": "error",
     "arrow-spacing": "error",
-    "comma-spacing": ["error", { "before": false, "after": true }],
+    "comma-spacing": [
+      "error",
+      {
+        "before": false,
+        "after": true
+      }
+    ],
     "eol-last": "error",
-
     "prettier/prettier": "error"
   }
 }
